<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_solution"
        android:icon="@drawable/baseline_solution"
        android:title="@string/solution"/>

    <item
        android:id="@+id/create"
        android:enabled="false"
        android:title=""/>

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/baseline_library"
        android:title="@string/library"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_profile"
        android:title="@string/profile"/>
</menu>